Fixed css on mobile

--- a/styles/Faq.module.scss
+++ b/styles/Faq.module.scss
@@ -150,8 +150,7 @@
     }
 
     .FAQ_content {
-        margin: 5%;
         font-size: 0.9rem;
-        padding: 0px;
+        padding: 4px 16px;
     }
 }
